<resources>
    <string name="app_name">GithubRepo</string>
    <string name="sign_in_button">Sign In</string>
    <string name="personal_access_token_hint">Personal access token</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="invalid_token">Invalid token</string>
    <string name="invalid_input">Invalid input</string>
    <string name="repositories_toolbar_title">Repositories</string>
    <string name="license_tv">License</string>
    <string name="stars_tv" translatable="false">stars</string>
    <string name="forks_tv" translatable="false">forks</string>
    <string name="watchers_tv" translatable="false">watchers</string>
    <string name="connection_error">Can\'t connect to the server.\nCheck your internet connection</string>
    <string name="alert_dialog_title">Error</string>
    <string name="alert_dialog_button_text" translatable="false">OK</string>
    <string name="connection_error_item_title">Connection error</string>
    <string name="connection_error_item_desc">Check your internet connection</string>
    <string name="retry_button">Retry</string>
    <string name="refresh_button">Refresh</string>
    <string name="empty_item_title">Empty</string>
    <string name="empty_desc_item">No repositories at the moment</string>
    <string name="something_error_Item_title">Something went wrong</string>
    <string name="something_error_item_desc">Try again later</string>
    <string name="no_readme">No README.md</string>
    <string name="license_is_empty">Empty</string>
</resources>