<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailInfoFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:visibility="visible">

            <TextView
                android:id="@+id/linkTV"
                style="@style/LinkTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/very_large_space"
                android:layout_marginTop="@dimen/very_large_space"
                android:layout_marginEnd="@dimen/very_large_space"
                android:autoLink="web"
                android:drawablePadding="@dimen/very_small_space"
                android:ellipsize="end"
                android:gravity="start"
                android:singleLine="true"
                android:textSize="@dimen/medium_text_size"
                app:drawableStartCompat="@drawable/ic_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="github.com/pyrinnl/pomodoro" />


            <TextView
                android:id="@+id/licenseTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/very_large_space"
                android:gravity="center"
                android:text="@string/license_tv"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_license"
                app:layout_constraintStart_toStartOf="@+id/linkTV"
                app:layout_constraintTop_toBottomOf="@+id/linkTV" />

            <TextView
                android:id="@+id/licenseTypeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/very_large_space"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/licenseTitleTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/licenseTitleTV"
                tools:text="Apache-2.0" />


            <TextView
                android:id="@+id/starsCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/very_small_space"
                android:layout_marginTop="@dimen/very_large_space"
                android:gravity="center"
                android:textColor="@color/yellow"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="@+id/licenseTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/licenseTitleTV"
                tools:text="259" />

            <TextView
                android:id="@+id/starTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_space"
                android:text="@string/stars_tv"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/starsCountTV"
                app:layout_constraintStart_toEndOf="@+id/starsCountTV"
                app:layout_constraintTop_toTopOf="@+id/starsCountTV" />

            <TextView
                android:id="@+id/forksCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="@dimen/very_small_space"
                android:textColor="@color/green_second"
                app:drawableStartCompat="@drawable/ic_forks"
                app:layout_constraintBottom_toBottomOf="@+id/starsCountTV"
                app:layout_constraintEnd_toStartOf="@+id/forksTV"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/starTitleTV"
                app:layout_constraintTop_toTopOf="@+id/starsCountTV"
                tools:text="30" />

            <TextView
                android:id="@+id/forksTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_space"
                android:text="@string/forks_tv"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/forksCountTV"
                app:layout_constraintEnd_toStartOf="@+id/watchersCountTV"
                app:layout_constraintStart_toEndOf="@+id/forksCountTV"
                app:layout_constraintTop_toTopOf="@+id/forksCountTV" />

            <TextView
                android:id="@+id/watchersCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_space"
                android:textColor="@color/blue_second"
                android:drawablePadding="@dimen/very_small_space"
                app:drawableStartCompat="@drawable/ic_watchers"
                app:layout_constraintBottom_toBottomOf="@+id/forksCountTV"
                app:layout_constraintEnd_toStartOf="@+id/watchersTV"
                app:layout_constraintTop_toTopOf="@+id/forksCountTV"
                tools:text="10" />

            <TextView
                android:id="@+id/watchersTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchers_tv"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/watchersCountTV"
                app:layout_constraintEnd_toEndOf="@+id/licenseTypeTV"
                app:layout_constraintTop_toTopOf="@+id/watchersCountTV" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="forksCountTV, starsCountTV, watchersCountTV" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                android:orientation="vertical"
                android:paddingBottom="?attr/actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier">

                <ProgressBar
                    android:id="@+id/readmeProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/readmeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_space"
                    android:padding="@dimen/small_space"
                    tools:text="README.MD" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/errorItem"
        layout="@layout/item_error"
        android:visibility="gone" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ProgressBar
        android:id="@+id/startProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


